Filling fields for prep

--- a/client/lib/components/stock/modal_list/modal-list-no-shit/stock_list/modal-list-stock-list.html
+++ b/client/lib/components/stock/modal_list/modal-list-no-shit/stock_list/modal-list-stock-list.html
@@ -30,7 +30,7 @@
                 </thead>
                 <tbody>
                 {{#each ingredients}}
-                  {{> stockModalItemComponent stock=this onAddStockItem=onAddStockItem}}
+                  {{> stockModalItem stock=this onAddStockItem=onAddStockItem}}
                 {{/each}}
                 </tbody>
               </table>
