--- a/client/views/app/job-items/job-item-edit-submit/job-items-submit-edit.html
+++ b/client/views/app/job-items/job-item-edit-submit/job-items-submit-edit.html
@@ -242,7 +242,7 @@
                   <label class="col-sm-2 control-label">Portions</label>
 
                   <div class="col-sm-10">
-                    <input type="number" class="form-control portions" placeholder="No. of Portions" required>
+                    <input type="number" class="form-control portions" placeholder="No. of Portions" value="{{jobItem.portions}}" required>
                   </div>
                 </div>
 
@@ -252,7 +252,7 @@
 
                   <div class="col-sm-10">
                     <div class="input-group m-b">
-                      <input type="number" class="form-control shelf-life" placeholder="Shelf Life" required>
+                      <input type="number" class="form-control shelf-life" placeholder="Shelf Life" value="{{jobItem.shelfLife}}" required>
                       <span class="input-group-addon">Days</span>
                     </div>
                   </div>
