Fixed custom form

--- a/client/lib/components/invitation-accept/view.html
+++ b/client/lib/components/invitation-accept/view.html
@@ -1,3 +1,3 @@
 <template name="invitationAcceptForm">
-  {{> render component="customForm" submitCaption="Register" fields=state$fields onSubmit=state$onFormSubmit}}
+  {{> customForm submitCaption="Register" fields=state$fields onSubmit=state$onFormSubmit}}
 </template>
