--- a/client/views/app/common/custom-form/form-item/input-fields/input-text/input-text.html
+++ b/client/views/app/common/custom-form/form-item/input-fields/input-text/input-text.html
@@ -5,7 +5,7 @@
          id="{{state$item.name}}"
          name="{{state$item.name}}"
          placeholder="{{state$item.placeholder}}"
-    {{state$maxLength}}
-    {{state$disabled}}
-    {{state$required}}>
+    {{maxLength}}
+    {{disabled}}
+    {{required}}>
 </template>
