--- a/client/views/app/job-items/job-item-edit-submit/job-items-submit-edit.html
+++ b/client/views/app/job-items/job-item-edit-submit/job-items-submit-edit.html
@@ -171,12 +171,7 @@
                   <label class="col-sm-2 control-label">Starts On</label>
 
                   <div class="col-sm-10">
-                    <div class="input-group starts-on-date-picker">
-                      <span class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
-                      </span>
-                      <input type="text" class="form-control" value="{{startsOn}}">
-                    </div>
+                    {{> reactiveDateTimePicker selector="starts-on-date-picker" value=startsOn}}
                   </div>
                 </div>
 
@@ -222,7 +217,7 @@
                                value="on-date">
                       {{/if}}
                       <label for="radio">
-                        On <input type="text" class="ends-on-date-picker form-control" value="{{endsOn}}">
+                        On {{> reactiveDateTimePicker selector="ends-on-date-picker" value=endsOn}}
                       </label>
                     </div>
 
@@ -242,7 +237,8 @@
                   <label class="col-sm-2 control-label">Portions</label>
 
                   <div class="col-sm-10">
-                    <input type="number" class="form-control portions" placeholder="No. of Portions" value="{{jobItem.portions}}" required>
+                    <input type="number" class="form-control portions" placeholder="No. of Portions"
+                           value="{{jobItem.portions}}" required>
                   </div>
                 </div>
 
@@ -252,7 +248,8 @@
 
                   <div class="col-sm-10">
                     <div class="input-group m-b">
-                      <input type="number" class="form-control shelf-life" placeholder="Shelf Life" value="{{jobItem.shelfLife}}" required>
+                      <input type="number" class="form-control shelf-life" placeholder="Shelf Life"
+                             value="{{jobItem.shelfLife}}" required>
                       <span class="input-group-addon">Days</span>
                     </div>
                   </div>
