--- a/client/views/app/menu-items/list/menu-items-list.html
+++ b/client/views/app/menu-items/list/menu-items-list.html
@@ -3,18 +3,19 @@
   {{> pageHeading title="Menus List" category='Menus' name="menulist"}}
 
   <div class="wrapper wrapper-content animated">
-    {{> render component="menuFilters"}}
+    {{> menuFilters}}
 
     <div class="row">
       <div class="col-lg-12">
 
         <input type="text" name="searchMenuItems" id="searchMenuItemsBox" class="form-control col-sm-8"
                placeholder="Search from Name">
+
         <hr/>
 
         <div class="list-group">
-          {{#each getMenuItems}}
-            {{> render component='menuItem' menuitem=this}}
+          {{#each menuItems}}
+            {{> menuItem}}
           {{/each}}
         </div>
         <p>
@@ -24,10 +25,7 @@
     </div>
   </div>
 
-  <!-- ADD CATEGORY -->
-  <div class="modal fade" id="addCategoryModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-       aria-hidden="true">
-    {{> render component = 'addNewCategory'}}
-  </div>
-  <!-- /ADD CATEGORY  -->
+  <!-- ADD CATEGORY MODAL -->
+  {{> addNewCategory}}
+  <!-- /ADD CATEGORY MODAL -->
 </template>
