--- a/client/views/app/email/email.html
+++ b/client/views/app/email/email.html
@@ -18,29 +18,28 @@
               <label class="col-sm-2 control-label">To:</label>
 
               <div class="col-sm-10">
-                <input type="text" class="form-control emailTo" value="{{state$supplier.email}}">
+                <input type="text" class="form-control emailTo" value="{{supplier.email}}">
               </div>
             </div>
             <div class="form-group">
               <label class="col-sm-2 control-label emailTitle">Subject:</label>
 
               <div class="col-sm-10">
-                <input type="text" class="form-control" value="{{state$subject}}">
+                <input type="text" class="form-control" value="{{subject}}">
               </div>
             </div>
             <div class="form-group">
               <label class="col-sm-2 control-label">Reply To:</label>
 
               <div class="col-sm-10">
-                <input type="text" class="form-control replyTo" value="{{state$replyToEmail}}">
+                <input type="text" class="form-control replyTo" value="{{replyToEmail}}">
               </div>
             </div>
           </form>
           <br>
 
           <div class="clearfix"></div>
-          {{> render component="textEditor" id='composeMailEditorSubmit' initialHtml=state$initialHtml}}
-
+            {{> textEditor initialHtml=initialHtml}}
           <div class="mail-body text-right tooltip-demo">
             <a href="#" class="btn btn-white btn-sm" data-dismiss="modal" data-toggle="tooltip" data-placement="top"
                title="Discard email">
