--- a/client/views/app/roster/template/weekly-template-header/weekly-template-header.html
+++ b/client/views/app/roster/template/weekly-template-header/weekly-template-header.html
@@ -8,7 +8,7 @@
     <!-- CALENDAR -->
     <div id="calendarModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
          aria-hidden="true">
-      {{> render component='weekSelector'}}
+      {{> weekSelector}}
     </div>
     <!-- /CALENDAR -->
   {{/if}}
