Finished porting menu items list

--- a/client/views/app/menu-items/list/menu-filters/add-new-category/add-new-category.html
+++ b/client/views/app/menu-items/list/menu-filters/add-new-category/add-new-category.html
@@ -14,7 +14,7 @@
               <label class="col-sm-2 control-label">Name</label>
 
               <div class="col-sm-10">
-                <input type="text" name="name" class="form-control" placeholder="Add Category">
+                <input type="text" class="form-control category-name-input" placeholder="Add Category">
               </div>
             </div>
           </div>
