--- a/client/views/app/suppliers/suppliers-list/suppliers-list.html
+++ b/client/views/app/suppliers/suppliers-list/suppliers-list.html
@@ -25,7 +25,7 @@
     {{#if canEditStock}}
       <div class="modal fade" id="addNewSupplierModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
            aria-hidden="true">
-        {{> render component = 'newSupplier'}}
+        {{> newSupplier}}
       </div>
     {{/if}}
     <!-- /ADD NEW SUPPLIER-->
