Fixed basic details of supplier

--- a/client/views/app/suppliers/supplier-profile-view.html
+++ b/client/views/app/suppliers/supplier-profile-view.html
@@ -2,7 +2,7 @@
   {{> pageHeading title=name category="Stocks"}}
   <div class="wrapper wrapper-content">
     <div class="row animated">
-      {{> render component="supplierProfile"}}
+      {{> supplierProfile}}
     </div>
   </div>
 </template>
