--- a/client/views/app/suppliers/supplier-profile/supplier-profile.html
+++ b/client/views/app/suppliers/supplier-profile/supplier-profile.html
@@ -3,7 +3,7 @@
     <div class="wrapper wrapper-content">
       <div class="ibox">
         <div class="ibox-content">
-          {{> render component="basics" id=state$supplierId}}
+          {{> basics id=supplierId}}
           <div class="row m-t-sm">
             <div class="col-lg-12">
               <div class="panel blank-panel">
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div class="row">
-          {{> commentsPanel id=state$supplierId type='supplier'}}
+          {{> commentsPanel id=supplierId type='supplier'}}
         </div>
       </div>
     </div>
