--- a/client/views/app/suppliers/supplier-profile/supplier-profile.html
+++ b/client/views/app/suppliers/supplier-profile/supplier-profile.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="panel-body">
                   <div class="tab-content">
-                    {{> render component="receiptsList"}}
+                    {{> receiptsList id=supplierId}}
                     {{> render component="productsList"}}
                   </div>
                 </div>
