--- a/client/views/app/suppliers/supplier-profile/receipts/receipt-item/receipt-item.html
+++ b/client/views/app/suppliers/supplier-profile/receipts/receipt-item/receipt-item.html
@@ -1,11 +1,11 @@
 <template name="receiptItem">
   <tr>
     <td>
-      {{#if state$received}}
+      {{#if received}}
         <span class="label label-primary"><i class="fa fa-check"></i> Completed</span>
       {{else}}
-        {{#if state$pending}}
-          <span class="label label-warning"><i class="fa fa-check"></i>Pending</span>
+        {{#if pending}}
+          <span class="label label-warning"><i class="fa fa-check"></i> Pending</span>
         {{else}}
           <span class="label label-default"><i class="fa fa-check"></i>
           Not ordered
