introduce new ingredients item editor

--- a/client/lib/components/job-items/submit/view.html
+++ b/client/lib/components/job-items/submit/view.html
@@ -220,9 +220,6 @@
   <!-- /INGREDIENTS LIST -->
 
   <!-- ADD INGREDIENT-->
-  <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-       aria-hidden="true">
-    {{> render component = 'submitIngredient' isModal=true}}
-  </div>
+    {{> ingredientItemEditor isModal=true}}
   <!-- /ADD INGREDIENT -->
 </template>
