--- a/client/lib/components/stock/master_list/list/view.html
+++ b/client/lib/components/stock/master_list/list/view.html
@@ -30,10 +30,7 @@
         </table>
         <!-- EDIT INGREDIENT-->
         {{#if canViewStock}}
-          <div class="modal fade" id="editIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-               aria-hidden="true">
-            {{> render component = 'editIngredientItem'}}
-          </div>
+            {{> ingredientItemEditor isModal=true ingredient=state$thisIngredient}}
         {{/if}}
         <!-- /EDIT INGREDIENT -->
       </div>
