--- a/client/lib/components/stock/stock_header/view.html
+++ b/client/lib/components/stock/stock_header/view.html
@@ -1,6 +1,6 @@
 <template name="stockHeader">
   <div class="title-action">
-    <a class="btn btn-primary" href="#addIngredientModal" data-toggle="modal">Add new stock</a>
+    <a class="btn btn-primary" href="#ingredientItemEditor" data-toggle="modal">Add new stock</a>
     {{#if state$isArchived}}
       <a href="{{pathFor route='ingredientsList'}}" class="btn btn-info">
         <i class="fa fa-long-arrow-left"></i> Active Items
@@ -21,10 +21,7 @@
           </ul>
         </div>
         <!-- ADD INGREDIENT-->
-        <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-             aria-hidden="true">
-          {{> render component = 'submitIngredient' isModal=true}}
-        </div>
+          {{> ingredientItemEditor isModal=true}}
         <!-- /ADD INGREDIENT -->
       {{/if}}
     {{/if}}
