Fixed suppliers products

--- a/client/views/app/suppliers/supplier-profile/products/procucts-list.html
+++ b/client/views/app/suppliers/supplier-profile/products/procucts-list.html
@@ -11,8 +11,8 @@
       </tr>
       </thead>
       <tbody>
-      {{#each state$products}}
-        {{> render component="productItem" item=this}}
+      {{#each products}}
+        {{> productItem item=this}}
       {{else}}
         No products
       {{/each}}
