--- a/client/views/app/suppliers/supplier-profile/supplier-profile.html
+++ b/client/views/app/suppliers/supplier-profile/supplier-profile.html
@@ -18,7 +18,7 @@
                 <div class="panel-body">
                   <div class="tab-content">
                     {{> receiptsList id=supplierId}}
-                    {{> render component="productsList"}}
+                    {{> productsList id=supplierId}}
                   </div>
                 </div>
               </div>
