--- a/client/views/app/suppliers/supplier-profile/products/product-item/product-item.html
+++ b/client/views/app/suppliers/supplier-profile/products/product-item/product-item.html
@@ -1,9 +1,9 @@
 <template name="productItem">
-  <tr data-id="{{state$product._id}}">
-    <td><a href="" class="editProduct">{{state$product.code}}</a></td>
+  <tr>
+    <td><a href="#" class="editProduct">{{state$product.code}}</a></td>
     <td>{{state$product.description}}</td>
     <td>{{dateFormat state$product.createdOn}}</td>
     <td>{{state$product.portionOrdered}}</td>
-    <td>$ {{state$product.costPerPortion}}</td>
+    <td>${{state$product.costPerPortion}}</td>
   </tr>
 </template>
