--- a/client/views/app/stocktake/counting-view/counting-view-items/list/counting-view-list.html
+++ b/client/views/app/stocktake/counting-view/counting-view-items/list/counting-view-list.html
@@ -29,10 +29,11 @@
         {{#if notTemplate}}
           <ul class="list-group sortableStockItems">
             {{#each stocktakeList}}
+              StockTakeList
               {{> stockCountingListItem id=this.stockId
                                         activeGeneralArea=activeGeneralArea
                                         activeSpecialArea=activeSpecialArea
-                                        stocktakeId=this._id
+                                        stocktakeId=stockTakeId
                                         editStockTake=editable}}
             {{else}}
               No items on this list
@@ -41,6 +42,7 @@
         {{else}}
           <ul class="list-group sortableStockItems">
             {{#each ingredientsList}}
+              Ingredients list
               {{> stockCountingListItem id=this._id
                                         activeGeneralArea=activeGeneralArea
                                         activeSpecialArea=activeSpecialArea
@@ -64,7 +66,7 @@
   <!-- STOCKS MODAL LIST-->
   <div class="modal fade" id="stocksListModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
        aria-hidden="true">
-    {{> render component = 'stocksModalList' name="stockModal"}}
+    {{> render component = 'stocksModalList' name="stockModal" activeSpecialArea=activeSpecialArea}}
   </div>
   <!-- /STOCKS MODAL LIST -->
 
