--- a/client/views/app/suppliers/suppliers-list/create-supplier-modal/create-supplier-modal.html
+++ b/client/views/app/suppliers/suppliers-list/create-supplier-modal/create-supplier-modal.html
@@ -13,7 +13,7 @@
             <label class="col-sm-4 control-label">Supplier's Name</label>
 
             <div class="col-sm-6 ">
-              <input type="text" class="form-control supplier-name" placeholder="Add Name">
+              <input type="text" class="form-control supplier-name" placeholder="Add Name" name="name">
             </div>
           </div>
 
@@ -22,7 +22,7 @@
             <label class="col-sm-4 control-label">Email address</label>
 
             <div class="col-sm-6 ">
-              <input type="email" class="form-control email" placeholder="Add Email Address">
+              <input type="email" class="form-control email" placeholder="Add Email Address" name="email">
             </div>
           </div>
 
@@ -32,7 +32,7 @@
 
             <div class="col-sm-6 ">
               <input type="text" class="form-control phone-number" placeholder="Add Phone Number"
-                     title="Phone number">
+                     title="Phone number" name="phone">
             </div>
           </div>
 
@@ -41,7 +41,7 @@
             <label class="col-sm-4 control-label">Minimum order amount</label>
 
             <div class="col-sm-6 ">
-              <input type="number" class="form-control minimum-order-amount" placeholder="Minimum order amount">
+              <input type="number" class="form-control minimum-order-amount" placeholder="Minimum order amount" name="minimumOrderAmount">
             </div>
           </div>
 
@@ -65,10 +65,7 @@
               <p><input name="deliveryDay" type="checkbox" value="sunday"> Sunday</p>
 
               <div class='input-group date delivery-time'>
-                <input type='text' class="form-control"/>
-                  <span class="input-group-addon">
-                    <span class="glyphicon glyphicon-time"></span>
-                  </span>
+                {{> comboTimeEditable params=timepickerParams}}
               </div>
             </div>
           </div>
@@ -78,7 +75,7 @@
             <label class="col-sm-4 control-label">Contact name</label>
 
             <div class="col-sm-6 ">
-              <input type="text" class="form-control contact-name" placeholder="Contact name">
+              <input type="text" class="form-control contact-name" placeholder="Contact name" name="contactName">
             </div>
           </div>
 
@@ -88,7 +85,7 @@
 
             <div class="col-sm-6 ">
               <input type="text" class="form-control customer-number" placeholder="Business customer number"
-                     title="Phone number">
+                     title="Phone number" name="customerNumber">
             </div>
           </div>
 
