--- a/client/views/app/suppliers/supplier-profile/basics/supplier-basics.html
+++ b/client/views/app/suppliers/supplier-profile/basics/supplier-basics.html
@@ -44,7 +44,9 @@
               {{/each}}
             </div>
             at
-            <a class="delivery-time">{{timeFormat supplier.deliveryTime}}</a>
+            <a class="delivery-time">
+              {{> comboTimeEditable params=timepickerParams}}
+            </a>
           </td>
         </tr>
         <tr>
