--- a/client/views/app/common/ingredient-item-editor/editor-body/editor-body.html
+++ b/client/views/app/common/ingredient-item-editor/editor-body/editor-body.html
@@ -1,82 +1,124 @@
 <template name="submitIngredientBody">
   <form id="submitIngredientForm" class="form-horizontal" role="form">
+    {{#with ingredient}}
+      <div class="form-group">
+        <label class="col-sm-4 control-label">Supplier's Code</label>
 
-    <div class="form-group">
-      <label class="col-sm-4 control-label">Supplier's Code</label>
+        {{#if canEditStock}}
+        {{else}}
+          <div class="form-control">{{code}}</div>
+        {{/if}}
 
-      <div class="col-sm-6 ">
-        <input type="text" name="code" class="form-control" placeholder="Add Code">
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="col-sm-4 control-label">Name</label>
-
-      <div class="col-sm-6 ">
-        <input type="text" name="name" class="form-control" placeholder="Add Name">
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="col-sm-4 control-label">Supplier</label>
-
-      <div class="col-sm-6 ">
-        <select name="supplier" class="form-control">
-          <option value="">Select a supplier</option>
-          {{#each suppliers}}
-            <option value="{{_id}}">{{name}}</option>
-          {{/each}}
-        </select>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="col-sm-4 control-label">
-        Unit Ordered
-        <i class="fa fa-question-circle pull-right unit-ordered-popover btn-link" data-toggle="popover"
-           data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
-      </label>
-
-      <div class="col-sm-6">
-        <input type="text" name="unitOrdered" class="form-control" placeholder="Type a unit"/>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="col-sm-4 control-label">How much does each {{state$unitOrdered}} cost?</label>
-
-      <div class="col-sm-6">
-        <div class="input-group">
-          <span class="input-group-addon">$</span>
-          <input type="text" name="costPerPortion" class="form-control"
-                 placeholder="How much does each {{state$unitOrdered}} cost?">
+        <div class="col-sm-6 ">
+          {{#if canEditStock}}
+            <input type="text" name="code" class="form-control" placeholder="Add Code" value="{{code}}">
+          {{else}}
+            <div class="form-control">{{code}}</div>
+          {{/if}}
         </div>
       </div>
-    </div>
 
-    <div class="form-group">
-      <label class="col-sm-4 control-label">
-        Unit Used
-        <i class="fa fa-question-circle pull-right btn-link unit-used-popover" data-toggle="popover"
-           data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
-      </label>
+      <div class="form-group">
+        <label class="col-sm-4 control-label">Name</label>
 
-      <div class="col-sm-6 ">
-        <input type="text" name="unitUsed" placeholder="Type a unit" class="form-control"/>
+        <div class="col-sm-6 ">
+          {{#if canEditStock}}
+            <input type="text" name="name" class="form-control" placeholder="Add Name" value="{{description}}">
+          {{else}}
+            <div class="form-control">{{description}}</div>
+          {{/if}}
+        </div>
       </div>
-    </div>
 
-    <div class="form-group">
-      <label class="col-sm-4 control-label">
-        How many {{state$unitUsed}} are there in a {{state$unitOrdered}}?
-        <i class="fa fa-question-circle pull-right btn-link unit-size-popover" data-toggle="popover"
-           data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
-      </label>
+      <div class="form-group">
+        <label class="col-sm-4 control-label">Supplier</label>
 
-      <div class="col-sm-6">
-        <input type="text" name="unitSize" class="form-control" placeholder="Unit Size">
+        <div class="col-sm-6 ">
+          {{#if canEditStock}}
+            <select name="supplier" class="form-control">
+              {{#each supplierOptions}}
+                <option {{suppliersOptionAttrs}}>{{name}}</option>
+              {{/each}}
+            </select>
+          {{else}}
+            <div class="form-control">
+              {{#if suppliers}}
+                {{supplierName suppliers}}
+              {{else}}
+                Not assigned
+              {{/if}}
+            </div>
+          {{/if}}
+        </div>
       </div>
-    </div>
+
+      <div class="form-group">
+        <label class="col-sm-4 control-label">
+          Unit Ordered
+          <i class="fa fa-question-circle pull-right unit-ordered-popover btn-link" data-toggle="popover"
+             data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
+        </label>
+
+        <div class="col-sm-6">
+          {{#if canEditStock}}
+            <input type="text" name="unitOrdered" class="form-control" placeholder="Type a unit"
+                   value="{{portionOrdered}}"/>
+          {{else}}
+            <div class="form-control">{{defaultValue portionOrdered '-'}}</div>
+          {{/if}}
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label class="col-sm-4 control-label">How much does each {{state$unitOrdered}} cost?</label>
+
+        <div class="col-sm-6">
+          {{#if canEditStock}}
+            <div class="input-group">
+              <span class="input-group-addon">$</span>
+              <input type="text" name="costPerPortion" class="form-control"
+                     placeholder="How much does each {{state$unitOrdered}} cost?" value="{{costPerPortion}}">
+            </div>
+          {{else}}
+            <div class="form-control">${{costPerPortion}}</div>
+          {{/if}}
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label class="col-sm-4 control-label">
+          Unit Used
+          <i class="fa fa-question-circle pull-right btn-link unit-used-popover" data-toggle="popover"
+             data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
+        </label>
+
+        <div class="col-sm-6 ">
+          {{#if canEditStock}}
+            <input type="text" name="unitUsed" placeholder="Type a unit" class="form-control" value="{{portionUsed}}"/>
+          {{else}}
+            <div class="form-control">{{defaultValue portionUsed '-'}}</div>
+          {{/if}}
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label class="col-sm-4 control-label">
+          How many {{state$unitUsed}} are there in a {{state$unitOrdered}}?
+          <i class="fa fa-question-circle pull-right btn-link unit-size-popover" data-toggle="popover"
+             data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
+        </label>
+
+        <div class="col-sm-6">
+          {{#if canEditStock}}
+            <input type="text" name="unitSize" class="form-control" placeholder="Unit Size" value="{{unitSize}}">
+          {{else}}
+            <div class="form-control">{{unitSize}}</div>
+          {{/if}}
+        </div>
+      </div>
+    {{/with}}
+
+    {{> ingredientEditorRelatedJobs ingredient}}
 
     {{#unless isModal}}
       {{> ingredientItemEditorButtons}}
