--- a/client/views/app/common/ingredient-item-editor/ingredient-item-editor.html
+++ b/client/views/app/common/ingredient-item-editor/ingredient-item-editor.html
@@ -7,7 +7,14 @@
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
                 class="sr-only">Close</span></button>
-            <h4 class="modal-title" id="myModalLabel">Add Stocks</h4>
+            <h4 class="modal-title" id="myModalLabel">
+              {{#if ingredient}}
+                {{#if canEditStock}} Edit {{/if}}
+              {{else}}
+                Add
+              {{/if}}
+              Stocks
+            </h4>
           </div>
           <div class="modal-body">
             {{> ingredientItemEditorBody}}
